--- a/views/home.jade
+++ b/views/home.jade
@@ -10,6 +10,7 @@ html
         link(rel='stylesheet', href='/css/home.css')
     
     body
+        .black-modal
         nav 
             #nav-collapse-button
                 i.fa.fa-bars
