--- a/views/home.jade
+++ b/views/home.jade
@@ -164,10 +164,10 @@ html
                             .item-contancts 
                                 .item
                                     i.fa.fa-envelope
-                                    .text fdmxfarhan@yahoo.com
+                                    .text imanmoshtaghi1381@gmail.com
                                 .item
                                     i.fa.fa-phone
-                                    .text +989336448037
+                                    .text +989108603616
                     .card
                         .profile-image 
                             img(src="/img/Sina.jpg")
@@ -190,10 +190,10 @@ html
                             .item-contancts 
                                 .item
                                     i.fa.fa-envelope
-                                    .text fdmxfarhan@yahoo.com
+                                    .text setaresogand54@gmail.com
                                 .item
                                     i.fa.fa-phone
-                                    .text +989336448037
+                                    .text +989102766542
                     
         include ./components/footer
         //- https://mattfarley.ca/
