update Publication and gallery

--- a/views/home.jade
+++ b/views/home.jade
@@ -18,8 +18,8 @@ html
                 a.active(href="/") Home 
                 a(href="#more-about-me") About
                 a(href="#members") Members
-                a(href="#") Publications
-                a(href="#") Gallery
+                a(href="/publication") Publications
+                a(href="/gallery") Gallery
                 a(href="#") Contact
             .languages 
                 .lang#farsi FA 
