--- a/views/gallery.jade
+++ b/views/gallery.jade
@@ -7,9 +7,11 @@ html
         link(rel="shortcut icon", href="/img/robot.png", type="image/x-icon")
         script(src="/js/jquery-3.5.1.min.js")
         meta(name="viewport" content="width=device-width, initial-scale=1.0")
-        link(rel='stylesheet', href='/css/home.css')
         link(rel='stylesheet', href='/css/gallery.css')
-    
+        -if(lang == 'EN')
+            link(rel='stylesheet', href='/css/home.css')
+        -else
+            link(rel='stylesheet', href='/css/home-fa.css')
     body
         .black-modal
         include ./components/navbar
