--- a/views/home-fa.jade
+++ b/views/home-fa.jade
@@ -7,7 +7,7 @@ html
         link(rel="shortcut icon", href="/img/robot.png", type="image/x-icon")
         script(src="/js/jquery-3.5.1.min.js")
         meta(name="viewport" content="width=device-width, initial-scale=1.0")
-        link(rel='stylesheet', href='/css/home.css')
+        link(rel='stylesheet', href='/css/home-fa.css')
     
     body
         .black-modal
@@ -15,12 +15,12 @@ html
             #nav-collapse-button
                 i.fa.fa-bars
             #nav-collapse-view 
-                a.active(href="/") Home 
-                a(href="#more-about-me") About
-                a(href="#members") Members
-                a(href="/publication") Publications
-                a(href="/gallery") Gallery
-                a(href="#") Contact
+                a.active(href="/") صفحه اصلی 
+                a(href="#more-about-me") درباره ما
+                a(href="#members") اعضا
+                a(href="/publication") مستندات 
+                a(href="/gallery") گالری 
+                a(href="#") تماس با ما
             .languages 
                 a(href="/?lang=FA").lang#farsi(class="#{lang == 'FA'? 'active' : ''}") FA 
                 a(href="/?lang=EN").lang#english(class="#{lang == 'EN'? 'active' : ''}") EN
@@ -29,12 +29,12 @@ html
             .top-info 
                 .hello 
                     .line 
-                    .text HELLO
-                h1.name We are 
+                    .text خوش آمدید
+                h1.name ما تیم 
                     .red IKIU Robotics 
-                    | team
-                p Imam Khomeini International University students, who are interested in robotic, science and technology.
-                a.button(href="#more-about-me")  MORE ABOUT US
+                    | هستیم
+                p دانشجویانی از دانشگاه بین المللی امام خمینی و علاقه مند به رشته‌های رباتیک و علم و تکنولوژی.
+                a.button(href="#more-about-me")  درباره تیم ما
                 .socials
                     a(href="https://instagram.com/ikiurobotic" target="_blank") 
                         i.fa.fa-instagram 
@@ -53,49 +53,49 @@ html
         section.light
             .dark-content 
                 .text#more-about-me
-                    h1 About IKIU Robotics
-                    p IKIU Robotics started it's jub in 2022, building an industerial robot and participating in Robocup2023, France. Our team is composed of professinal students in requiered subjects, including Software, Hardware, Mechanics, AI, Machine Learning, etc. The main purpose of our activity is to gain more experience and learn new knowledge.
+                    h1 درباره تیم IKIU Robotics
+                    p تیم رباتیک IKIU با ساخت ربات صنعتی @WORK و شرکت در مسابقات جهانی ربوکاپ 2023 کار خود را آغاز نمود. تیم ما از دانشجویان متخصص در زمینه‌های مورد نیاز شامل سخت افزار، نرم افزار، مکانیک، هوش مصنوعی و یادگیری ماشین تشکیل شده. هدف اصلی فعالیت این تیم کسب تجربه بیشتر و یادگیری علم و دانش است.
             .triple-content 
                 .column.bordered
                     img.icon(src="/img/designer.png")
-                    h1.name Targets 
-                    p Our main target is to improve our knowledge and learn as many things as we could in each subject. Gaining experience, participating in a compitition and inspiring other teams is another purpose of our jub.
-                    h1.app Majers / Leagues
+                    h1.name اهداف 
+                    p هدف اصلی تیم رباتیک IKIU پیشرفت دانش و یادگیری هر چه بیشتر در حوزه‌های مختلف است. کسب تجربه و شرکت در مسابقات رباتیک و الهام گیری از تیم‌های دیگر از اهداف دیگر این تیم است.
+                    h1.app حوزه کاری
                     .item Robocup Industerial @Work
-                    h1.app Up Coming Events
-                    .item Iran Open 2023
-                    .item World Robocup 2023
-                    .item Robocup Asia Pacific 2023
+                    h1.app رویدادهای پیش رو
+                    .item مسابقات ایران اپن 2023
+                    .item مسابقات ربوکاپ جهانی 2023
+                    .item مسابقات ربوکاپ آسیایی 2023
                 .column.bordered
                     img.icon(src="/img/frontend.png")
-                    h1.name Activities
-                    p Researching and reading articles about the main subject of our project is something that all members do. We also provide training courses for students to help them learn.
-                    h1.app Research Fields
-                    .item ROS, Artificial Intelligence, Machine Learning, ...
-                    h1.app Training Courses
-                    .item ARM Microcontrolers
-                    .item PCB Design using Altium Designer
-                    .item 3D Designing using Solid Works
-                    .item Robot Operating System
-                    .item Machine Learning
-                    .item Image Proccessing using OpenCV
+                    h1.name فعالیت‌ها
+                    p تحقیق و مطالعه پیرامون موضوع اصلی پروژه کاریست که تمام اعضای تیم به آن مشغول هستند. همچنین برگزاری دوره‌های آموزشی برای دیگر دانشجویان جهت کمک به یادگیری بهتر آن‌ها از فعالیت‌های این تیم می‌باشد.
+                    h1.app حوزه‌های تحقیقاتی
+                    .item هوش مصنوعی، پردازش تصویر، سیستم عامل ربات‌ها (ROS)، یادگیری ماشین و ...
+                    h1.app دوره‌های آموزشی
+                    .item میکروکنترلرهای ARM
+                    .item طراحی PCB با نرم افزار Altium Designer
+                    .item طراحی سه بعدی با SOLID WORKS
+                    .item سیستم عامل ربات‌ها (ROS)
+                    .item یادگیری ماشین
+                    .item پردازش تصویر با استفاده از YOLOv8
                 .column
                     img.icon(src="/img/mentor.png")
-                    h1.name History
-                    p We began our work, deciding to participate in Iran Open Robocup 2023 and Robocup 2023. @Work League was more reliable due to the time and budget that we have at first.
-                    h1.app How our team was formed?
-                    p At first we started a project and researched about the subject. Developing this project, since we had some experiences in Robocup Junior before, we decided to try Major league as well.
+                    h1.name تاریخچه 
+                    p تیم ما ابتدا تصمیم به شرکت در مسابقات ربوکاپ 2023 گرفت و کار خود را در سال 1401 آغاز نمود. پروژه ربات @WORK، پروژه مناسبی با توجه به زمان و بودجه مورد نیاز بود.
+                    h1.app چگونه تیم ما شکل گرفت؟
+                    p در ابتدا پروژه‌ای را آغاز کرده و درباره آن تحقیقاتی انجام دادیم. با توجه به تجربه ای که در طی تحقیقات کسب کردیم تصمیم گرفتیم در مسابقات ربوکاپ شرکت کنیم.
         section.light#members
             .team-members 
-                h1.title Team Members
-                h2.under-title our team is composed of professional memebers which are listed below with their contact information. 
+                h1.title اعضای تیم
+                h2.under-title تیم ما از اعضای باتجربه‌ای تشکیل شده که اطلاعاتشان در لیست زیر قابل مشاهده است.
                 .two-side-cont
                     .card
                         .profile-image 
-                            img(src="/img/Sajjad.jpg")
+                            img(src="/img/Mehdi.jpg")
                         .info 
-                            h1.name Sajjad Mahmood Robati
-                            .desc Headmaster, Team Leader
+                            h1.name محمد مهدی جعفری
+                            .desc طراح سخت افزار، هوش مصنوعی، سیستم عامل ربات
                             .item-contancts 
                                 .item
                                     i.fa.fa-envelope
@@ -107,8 +107,8 @@ html
                         .profile-image 
                             img(src="/img/farhan.jpg")
                         .info 
-                            h1.name Farhan Daemi
-                            .desc Hardware Designing, AI Programming
+                            h1.name فرحان دائمی
+                            .desc سرپرست گروه، طراح پروژه
                             .item-contancts 
                                 .item
                                     i.fa.fa-envelope
@@ -120,8 +120,8 @@ html
                         .profile-image 
                             img(src="/img/Taha.jpg")
                         .info 
-                            h1.name Taha Ahmadzadeh
-                            .desc Hardware Designing, Microcontroler Programming
+                            h1.name طاها احمد زاده
+                            .desc توسعه سخت افزار، برنامه نویسی میکروکنترلر
                             .item-contancts 
                                 .item
                                     i.fa.fa-envelope
@@ -133,8 +133,8 @@ html
                         .profile-image 
                             img(src="/img/Padina.jpg")
                         .info 
-                            h1.name Padina Farrokhian
-                            .desc AI Programming, GUI Designing
+                            h1.name پادینا فرخیان
+                            .desc هوش مصنوعی، طراح رابط کاربری
                             .item-contancts 
                                 .item
                                     i.fa.fa-envelope
@@ -146,8 +146,8 @@ html
                         .profile-image 
                             img(src="/img/Amirali.jpg")
                         .info 
-                            h1.name Amir Ali Eskandari
-                            .desc Machine Learning, Image Proccessing
+                            h1.name امیرعلی اسکندری
+                            .desc پردازش تصویر، یادگیری ماشین
                             .item-contancts 
                                 .item
                                     i.fa.fa-envelope
@@ -159,8 +159,8 @@ html
                         .profile-image 
                             img(src="/img/Iman.jpg")
                         .info 
-                            h1.name Iman Moshtaghi
-                            .desc Microcontroler Programming, Researcher
+                            h1.name ایمان مشتاقی
+                            .desc محقق، برنامه نویسی میکروکنترلر
                             .item-contancts 
                                 .item
                                     i.fa.fa-envelope
@@ -172,8 +172,8 @@ html
                         .profile-image 
                             img(src="/img/Sina.jpg")
                         .info 
-                            h1.name Sina Hosseini
-                            .desc Microcontroler Programming, Mechanic Designing
+                            h1.name سینا حسینی
+                            .desc طراح مکانیک، برنامه نویسی میکروکنترلر
                             .item-contancts 
                                 .item
                                     i.fa.fa-envelope
@@ -185,8 +185,8 @@ html
                         .profile-image 
                             img(src="/img/Sogand.jpg")
                         .info 
-                            h1.name Sogand Marasi
-                            .desc Microcontroler Programming
+                            h1.name سوگند مراثی
+                            .desc برنامه نویسی میکروکنترلر، طراح گرافیکی
                             .item-contancts 
                                 .item
                                     i.fa.fa-envelope
@@ -195,7 +195,7 @@ html
                                     i.fa.fa-phone
                                     .text +989102766542
                     
-        include ./components/footer
+        include ./components/footer-fa
         //- https://mattfarley.ca/
         script(src="/js/home.js") 
         script(src="/js/graph.js") 
