--- a/views/publication.jade
+++ b/views/publication.jade
@@ -7,24 +7,15 @@ html
         link(rel="shortcut icon", href="/img/robot.png", type="image/x-icon")
         script(src="/js/jquery-3.5.1.min.js")
         meta(name="viewport" content="width=device-width, initial-scale=1.0")
-        link(rel='stylesheet', href='/css/home.css')
         link(rel='stylesheet', href='/css/publication.css')
-    
+        -if(lang == 'EN')
+            link(rel='stylesheet', href='/css/home.css')
+        -else
+            link(rel='stylesheet', href='/css/home-fa.css')
     body
         .black-modal
-        nav 
-            #nav-collapse-button
-                i.fa.fa-bars
-            #nav-collapse-view 
-                a.active(href="/") Home 
-                a(href="#more-about-me") About
-                a(href="#members") Members
-                a(href="#") Publications
-                a(href="/gallery") Gallery
-                a(href="#") Contact
-            .languages 
-                .lang#farsi FA 
-                .lang#english.active EN
+        include ./components/navbar
+        
         embed.pdf-view(src="/files/IKIU-Atwork-2023.pdf#toolbar=0")
         iframe.video-view(src="https://drive.google.com/file/d/1-zZTW5KRBPXx-UtJRslkmbjtyibx9vCj/preview" allow="autoplay")
 
