--- a/views/home-fa.jade
+++ b/views/home-fa.jade
@@ -195,7 +195,7 @@ html
                                     i.fa.fa-phone
                                     .text +989102766542
                     
-        include ./components/footer-fa
+        include ./components/footer
         //- https://mattfarley.ca/
         script(src="/js/home.js") 
         script(src="/js/graph.js") 
