--- a/views/home.jade
+++ b/views/home.jade
@@ -2,7 +2,7 @@ doctype html
 
 html
     head
-        title IKIU Robotics
+        title S.R.B Robotics
         link(rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css")
         link(rel="shortcut icon", href="/img/robot.png", type="image/x-icon")
         script(src="/js/jquery-3.5.1.min.js")
@@ -22,8 +22,8 @@ html
                 a(href="/gallery") Gallery
                 a(href="#") Contact
             .languages 
-                a(href="/?lang=FA").lang#farsi(class="#{lang == 'FA'? 'active' : ''}") FA 
-                a(href="/?lang=EN").lang#english(class="#{lang == 'EN'? 'active' : ''}") EN
+                a.lang#farsi(href="/?lang=FA" class="#{lang == 'FA'? 'active' : ''}") FA 
+                a.lang#english(href="/?lang=EN" class="#{lang == 'EN'? 'active' : ''}") EN
         header 
             canvas(id="nokey" width="800" height="800")
             .top-info 
@@ -31,12 +31,12 @@ html
                     .line 
                     .text HELLO
                 h1.name We are 
-                    .red IKIU Robotics 
+                    .red S.R.B Robotics 
                     | team
                 p Imam Khomeini International University students, who are interested in robotic, science and technology.
                 a.button(href="#more-about-me")  MORE ABOUT US
                 .socials
-                    a(href="https://instagram.com/ikiurobotic" target="_blank") 
+                    a(href="https://instagram.com/S.R.Brobotic" target="_blank") 
                         i.fa.fa-instagram 
                     a(href="https://t.me/fdmxfarhan" target="_blank") 
                         i.fa.fa-telegram 
@@ -53,8 +53,8 @@ html
         section.light
             .dark-content 
                 .text#more-about-me
-                    h1 About IKIU Robotics
-                    p IKIU Robotics started it's jub in 2022, building an industerial robot and participating in Robocup2023, France. Our team is composed of professinal students in requiered subjects, including Software, Hardware, Mechanics, AI, Machine Learning, etc. The main purpose of our activity is to gain more experience and learn new knowledge.
+                    h1 About S.R.B Robotics
+                    p S.R.B Robotics started it's jub in 2022, building an industerial robot and participating in Robocup2023, France. Our team is composed of professinal students in requiered subjects, including Software, Hardware, Mechanics, AI, Machine Learning, etc. The main purpose of our activity is to gain more experience and learn new knowledge.
             .triple-content 
                 .column.bordered
                     img.icon(src="/img/designer.png")
