--- a/views/home.jade
+++ b/views/home.jade
@@ -33,7 +33,7 @@ html
                 h1.name We are 
                     .red S.R.B Robotics 
                     | team
-                p Imam Khomeini International University students, who are interested in robotic, science and technology.
+                p Islamic Azad University Science and Research Branch students, who are interested in robotic, science and technology.
                 a.button(href="#more-about-me")  MORE ABOUT US
                 .socials
                     a(href="https://instagram.com/S.R.Brobotic" target="_blank") 
@@ -92,17 +92,17 @@ html
                 .two-side-cont
                     .card
                         .profile-image 
-                            img(src="/img/Sajjad.jpg")
+                            img(src="/img/ali.jpg")
                         .info 
-                            h1.name Sajjad Mahmood Robati
-                            .desc Headmaster, Team Leader
+                            h1.name Alireza Daemi
+                            .desc Hardware Designing, AI Programming
                             .item-contancts 
                                 .item
                                     i.fa.fa-envelope
-                                    .text fdmxfarhan@yahoo.com
+                                    .text alirezadaemi1999@gmail.com 
                                 .item
                                     i.fa.fa-phone
-                                    .text +989336448037
+                                    .text +989395631836
                     .card
                         .profile-image 
                             img(src="/img/farhan.jpg")
@@ -168,33 +168,6 @@ html
                                 .item
                                     i.fa.fa-phone
                                     .text +989108603616
-                    .card
-                        .profile-image 
-                            img(src="/img/Sina.jpg")
-                        .info 
-                            h1.name Sina Hosseini
-                            .desc Microcontroler Programming, Mechanic Designing
-                            .item-contancts 
-                                .item
-                                    i.fa.fa-envelope
-                                    .text Seyedsinahoseyni1990@gmail.com
-                                .item
-                                    i.fa.fa-phone
-                                    .text +989193073420
-                    .card
-                        .profile-image 
-                            img(src="/img/Sogand.jpg")
-                        .info 
-                            h1.name Sogand Marasi
-                            .desc Microcontroler Programming
-                            .item-contancts 
-                                .item
-                                    i.fa.fa-envelope
-                                    .text setaresogand54@gmail.com
-                                .item
-                                    i.fa.fa-phone
-                                    .text +989102766542
-                    
         include ./components/footer
         //- https://mattfarley.ca/
         script(src="/js/home.js") 
