--- a/views/home-fa.jade
+++ b/views/home-fa.jade
@@ -2,7 +2,7 @@ doctype html
 
 html
     head
-        title IKIU Robotics
+        title S.R.B Robotics
         link(rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css")
         link(rel="shortcut icon", href="/img/robot.png", type="image/x-icon")
         script(src="/js/jquery-3.5.1.min.js")
@@ -31,12 +31,12 @@ html
                     .line 
                     .text خوش آمدید
                 h1.name ما تیم 
-                    .red IKIU Robotics 
+                    .red S.R.B 
                     | هستیم
-                p دانشجویانی از دانشگاه بین المللی امام خمینی و علاقه مند به رشته‌های رباتیک و علم و تکنولوژی.
+                p دانشجویانی از دانشگاه آزاد تهران و علاقه مند به رشته‌های رباتیک و علم و تکنولوژی.
                 a.button(href="#more-about-me")  درباره تیم ما
                 .socials
-                    a(href="https://instagram.com/ikiurobotic" target="_blank") 
+                    a(href="https://instagram.com/S.R.Brobotic" target="_blank") 
                         i.fa.fa-instagram 
                     a(href="https://t.me/fdmxfarhan" target="_blank") 
                         i.fa.fa-telegram 
@@ -53,13 +53,13 @@ html
         section.light
             .dark-content 
                 .text#more-about-me
-                    h1 درباره تیم IKIU Robotics
-                    p تیم رباتیک IKIU با ساخت ربات صنعتی @WORK و شرکت در مسابقات جهانی ربوکاپ 2023 کار خود را آغاز نمود. تیم ما از دانشجویان متخصص در زمینه‌های مورد نیاز شامل سخت افزار، نرم افزار، مکانیک، هوش مصنوعی و یادگیری ماشین تشکیل شده. هدف اصلی فعالیت این تیم کسب تجربه بیشتر و یادگیری علم و دانش است.
+                    h1 درباره تیم S.R.B Robotics
+                    p تیم رباتیک S.R.B با ساخت ربات صنعتی @WORK و شرکت در مسابقات جهانی ربوکاپ 2023 کار خود را آغاز نمود. تیم ما از دانشجویان متخصص در زمینه‌های مورد نیاز شامل سخت افزار، نرم افزار، مکانیک، هوش مصنوعی و یادگیری ماشین تشکیل شده. هدف اصلی فعالیت این تیم کسب تجربه بیشتر و یادگیری علم و دانش است.
             .triple-content 
                 .column.bordered
                     img.icon(src="/img/designer.png")
                     h1.name اهداف 
-                    p هدف اصلی تیم رباتیک IKIU پیشرفت دانش و یادگیری هر چه بیشتر در حوزه‌های مختلف است. کسب تجربه و شرکت در مسابقات رباتیک و الهام گیری از تیم‌های دیگر از اهداف دیگر این تیم است.
+                    p هدف اصلی تیم رباتیک S.R.B پیشرفت دانش و یادگیری هر چه بیشتر در حوزه‌های مختلف است. کسب تجربه و شرکت در مسابقات رباتیک و الهام گیری از تیم‌های دیگر از اهداف دیگر این تیم است.
                     h1.app حوزه کاری
                     .item Robocup Industerial @Work
                     h1.app رویدادهای پیش رو
